# LumiBox

./: .gitmodules  LICENSE  README.md
firmware/: CMakeLists.txt  lumi_box_main.c
firmware/Core/: .mxproject  CMakeLists.txt  LumiBox.ioc  stm32f407vetx_flash.ld
firmware/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/Core/Src/: dma.c  gpio.c  main.c  rng.c  stm32f4xx_it.c  usart.c
firmware/Core/cmake/: gcc-arm-none-eabi.cmake
firmware/Core/cmake/stm32cubemx/: CMakeLists.txt
firmware/cmake/: utils.cmake
firmware/config/: lv_conf.h
firmware/drivers/: CMakeLists.txt
firmware/drivers/ili9341/: CMakeLists.txt
firmware/drivers/ili9341/inc/: ili9341.h  ili9341_defs.h
firmware/drivers/ili9341/src/: ili9341.c
firmware/gui/: CMakeLists.txt
firmware/gui/inc/: gui.h  gui_log.h
firmware/gui/src/: gui.c  gui_log.c
firmware/utils/: macros.h
